# sml_homework

./: README.md  main_submission.ipynb  pyproject.toml
data/processed/: y_train.parquet  y_val.parquet
notebooks/: eda.ipynb  modeling.ipynb  preprocessing.ipynb
src/sml_homework/: data_loader.py  modeling.py  preprocessing.py  visualization.py
